# NCA-reimplementation

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: experiment_1_growing.py
nca/: ca_utils.py
nca_utils/: __init__.py  utils.py
