[project]
name = "ncas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.20.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["nca", "nca_utils"]